# ytdlp-monitor

./: .gitignore  README.md
docs/: ADVANCED.md  INSTALL.md  RESUMO.md  TROUBLESHOOTING.md
scripts/: build-complete.bat  build.bat  dev.bat
src/: index.html  progress.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
